# Kairos

./: .gitignore  BootKairos.hs  ChangeLog.md  Kairos.cabal  Kairos.csd  LICENSE  LoadMe.hs  README.md  Setup.hs  Test.hs  cabal.sandbox.config  eulerroom.hs  package.yaml  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/61d5be1e/: cabal_macros.h
.stack-work/ghci/d4de8de4/: cabal_macros.h
Getting Started/: README.md
MarkovTables/: Test.csv  Test2.csv  Test3.csv
Performances/: .bu.hs.swp  34100.hs  FlashCrash.hs  README.md  albi.hs  algo10.hs  apr.hs  breaktest.hs  bu.hs  code.hs  eulerroom.hs  fools.hs  kakan.hs  kkn2.hs  longest.hs  pigro.hs  robot.hs  rtbb.hs  spaziox24.hs  spazioxspazio.hs  spccloud.hs  ten.hs  transnodal.hs  umanesimo.hs
Practice/: README.md  jan17.hs
app/: Main.hs
dailies/: README.md
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.1/: Kairos-0.3.4-inplace.conf  package.cache
lfsp/: README.md  lfsp00_dtfm00.hs
src/: kairos.hs
src/Kairos/: Clock.hs  Euclidean.hs  Instrument.hs  Kit.hs  Lib.hs  Markov.hs  Performance.hs  PfPat.hs  Pfield.hs  Player.hs  Scales.hs  TimePoint.hs  Utilities.hs
src/Kairos/Parser/Rhythm/: Spark.hs
src/kairos/: Base.hs  Clock.hs  Euclidean.hs  IOI.hs  Instrument.hs  Lib.hs  MapUtilities.hs  Markov.hs  Network.hs  Pattern.hs  Performance.hs  PfPat.hs  Pfield.hs  Player.hs  Scales.hs  Time.hs  TimePoint.hs  Transport.hs  Utilities.hs
src/kairos/Parser/Rhythm/: L.hs
src/kairos/Test/: Clock.hs  PfPat.hs  TimePoint.hs
test/: Main.hs  Spec.hs
test/Test/: Clock.hs  Kit.hs  PfPat.hs  TimePoint.hs
(+18 files in other folders)
