cabal-version: 3.0

name:           Kairos
version:        0.3.4
synopsis:       Live coding library
description:    Please see the README on GitHub at <https://github.com/leofltt/Kairos#readme>
category:       Sound
homepage:       https://github.com/leofltt/Kairos#readme
bug-reports:    https://github.com/leofltt/Kairos/issues
author:         Leo Foletto
maintainer:     flttleonardo@gmail.com
copyright:      2018, Leonardo Foletto
license:        MIT 
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
    Kairos.csd

source-repository head
  type: git
  location: https://github.com/leofltt/Kairos

library
  exposed-modules:
      Kairos.Lib
      Kairos.Base
      Kairos.Clock
      Kairos.TimePoint
      Kairos.Pfield
      Kairos.Instrument
      Kairos.Network
      Kairos.Player
      Kairos.Utilities
      Kairos.Scales
      Kairos.Markov
      Kairos.Euclidean
  other-modules:
      Paths_Kairos
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , bytestring
    , containers
    , csv
    , network
    , random
    , stm
    , time
    , transformers
    , vivid-osc
  default-language: Haskell2010

test-suite Kairos-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_Kairos
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Kairos
    , base >=4.7 && <5
    , bytestring
    , containers
    , csv
    , network
    , random
    , stm
    , time
    , transformers
    , vivid-osc
  default-language: Haskell2010
